# k8s-workflows

./: .gitignore  README.md  pyproject.toml  tox.ini
docker/: Dockerfile
jobs/models/: __init__.py  interface.py
jobs/shared/: consts.py  enums.py
jobs/steps/: __init__.py  extract_step.py
jobs/tasks/aggregate/: main.py
jobs/tasks/entrypoint/: main.py
jobs/tasks/stt/: main.py
jobs/tasks/summary/: main.py
jobs/tasks/vad/: main.py
manifests/: binding.yaml  role.yaml
requirements/: dev.txt  shared.txt  stt.txt  summary.txt
src/stt/: main.py
src/summary/: main.py
workflows/: workflow-toki.yaml  workflow.yaml
